tests/NormalTests/paczka1/fuzzy1/39135020.err
Error in line 3: 8fJKqKBcX1w S675 16,3
Error in line 2: iNLBRUXmfED S675 75,6
Error in line 8: iNLBRUXmfED A489 45,2
Error in line 18: S630 A300 21,4
Error in line 13: iNLBRUXmfED A300 40,1
Error in line 16: Iu1lI S675 84,6
Error in line 26: iNLBRUXmfED S675 61,7
